--- a/Fabish_Esc6/index.html
+++ b/Fabish_Esc6/index.html
@@ -10,6 +10,7 @@
     <!-- icon  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="shortcut icon" href="./image/Fabish_Logo_Final_a68866dc-7573-4072-bd3f-3e356eca427e.svg" type="">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 </head>
 <body>
@@ -398,9 +399,10 @@
 </button>
 
 
-<!-- Testimonial start --><section class="testimonial-section">
+<!-- Testimonial start -->
+ <section class="testimonial-section">
     <div class="container">
-        <h2 class="section-title">Testimonial</h2>
+        <h2 class="section-title">What Our Clients Say</h2>
         <div class="testimonial-slider">
             <div class="testimonial-item active">
                 <div class="testimonial-content">
@@ -477,7 +479,6 @@
     <div class="footer-bottom">
         <p>© 2025 Fabish by Alaa-Abdullh</p>
     </div>
-    <button class="scroll-top"><i class="fas fa-arrow-up"></i></button>
 </footer>
 
 <!-- End Footer -->
