change some css

--- a/Fabish_Esc6/index.html
+++ b/Fabish_Esc6/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="shortcut icon" href="./image/Fabish_Logo_Final_a68866dc-7573-4072-bd3f-3e356eca427e.svg" type="">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 
 </head>
 <body>
@@ -27,6 +29,9 @@
             <img src="./image/Fabish_Logo_Final_a68866dc-7573-4072-bd3f-3e356eca427e.svg" alt="logo-img" class="logo">
             </div>
 
+            <!-- <div class="menu-toggle" id="menu-toggle">
+                <i class="fas fa-bars"></i>
+            </div> -->
             <!-- link -->
 
             <div class="link">
